crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unique_and_indexed_snapshot@unique_and_indexed_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 123
expression: rendered
---
model Users {
  id Int
  email String @unique
  username String @unique(map: "uq_username")
  department String?
  status String @default("active")

  @@index([department], map: "idx_department")
  @@map("users")
}
