crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_constant_default_snapshot@unknown_constant_default_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type UnknownDefault struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    Value string `gorm:"column:value;not null;type:text;default:SOME_CONSTANT" json:"value"`
}

func (UnknownDefault) TableName() string { return "unknown_default" }
