crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_function_default_snapshot@unknown_function_default_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class UnknownDefaults(models.Model):
    id = models.IntegerField(primary_key=True)
    code = models.TextField()

    class Meta:
        db_table = "unknown_defaults"
