crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_function_default_snapshot@unknown_function_default_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model UnknownDefaults {
  id Int @id
  code String @default(dbgenerated("gen_code()")) @db.Text

  @@map("unknown_defaults")
}
